kubernetes/main/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
spec:
  hostnames: ["rook.${CLUSTER_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
